# MarqetSim

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  MANIFEST.in  README.md  app.py  config.ini  fly.toml  main.py  makefile  pyproject.toml  requirements.txt  test.py  tox.ini
.github/ISSUE_TEMPLATE /: config.yml
.github/workflows/: codestyle.yaml  fly-deploy.yml
agents/situations/: main_situation.yaml  test-input.yaml  test-situation-1.yaml
interface/: app.py
marq-knowledge/: placeholder.md
marq-knowledge/project-test-case/: chroma.sqlite3
marqetsim/: __init__.py  agent.py  agent_generator.py  anthropic_utils.py  cli.py  config.ini  environment.py  examples.py  knowledge.py  ollama_utils.py  openai_utils.py  simulator.py  utils.py
marqetsim/agent/: __init__.py  example.py  factory.py  person.py  registry.py
marqetsim/cli/: __init__.py  main.py
marqetsim/cli/static/: welcome.txt
marqetsim/config/: __init__.py  config.ini  config.py
marqetsim/config_file/: market-insights-ai.yaml
marqetsim/environment/: __init__.py  general.py
marqetsim/llm/: __init__.py  anthropic.py  base.py  manager.py  ollama.py  openai.py
marqetsim/memory/: __init__.py  base.py  episodic.py  rag.py  semantic.py
marqetsim/prompts/: tinyperson.mustache
marqetsim/schema/: schema.py
marqetsim/settings/: agent-attribute-weight.yaml  config.ini
marqetsim/utils/: __init__.py  common.py  extractor.py  logger.py  ollama_utils.py  openai_utils.py
test/: debug-cli.py  debug_cli.py  semantic_test.py  slider_update.py  troupe.py
test-results/config-name/: test.csv
test/document_test/: doc1.txt  doc2.txt
test/projects_config/: agents.csv  market-insights-ai-num-agents.yaml  market-insights-ai-num-agents_responses.json  market-insights-ai-with-data.yaml  market-insights-ai.yaml
utils/: config.py
