[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["marqetsim"]
include-package-data = true

[project]
name = "marqetsim"
version = "0.1.1"
authors = [
    { name = "Andreas Chandra", email = "andreas@jakartaresearch.com" }
]
description = "LLM-based agent for ket research."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "pytest",
    "openai >= 1.40",
    "tiktoken",
    "msal",
    "rich",
    "requests",
    "chevron",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "llama-index-readers-web",
    "pypandoc",
    "docx",
    "markdown",
    "jupyter",
    "pydantic",
    "anthropic",
    "tox>=4.27.0",
    "isort>=6.0.1",
    "black>=25.1.0",
]

[project.scripts]
marq = "marqetsim.cli:launch"

[project.urls]
"Homepage" = "https://github.com/andreaschandra/marqetsim"

[tool.black]
line-length = 88
target-version = ['py310']  # or your target Python version

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


