[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["marqetsim"]
include-package-data = true

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[project]
name = "marqetsim"
version = "1.0.0"
authors = [
    { name = "Andreas Chandra", email = "andreas@jakartaresearch.com" }
]
description = "LLM-based agent for ket research."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "pandas",
    "pytest",
    "openai >= 1.40",
    "tiktoken",
    "msal",
    "rich",
    "requests",
    "chevron",
    "llama-index",
    "llama-index-embeddings-huggingface",
    "llama-index-readers-web",
    "pypandoc",
    "docx",
    "markdown",
    "jupyter",
    "pydantic",
    "anthropic",
    "llama-index==0.12.3",
    "chromadb==1.0.15",
    "tox>=4.27.0",
    "isort>=6.0.1",
    "black>=25.1.0",
    "pip",
    "ollama>=0.5.1",
    "pylint>=3.3.8",
]

[project.scripts]
marq = "marqetsim.cli:cli"

[project.urls]
"Homepage" = "https://github.com/andreaschandra/marqetsim"

[tool.black]
line-length = 88
target-version = ['py310']  # or your target Python version

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true


